value stmt: replaced integer by long; arithmetic values