@@ -98,7 +98,7 @@ public class CommunicationDescriptionInputOutputTest extends CobolTestBase {
 						.getDataDescriptionEntry("WS-PERSON");
 				assertNotNull(dataDescriptionEntryWsPerson);
 				assertEquals("WS-PERSON", dataDescriptionEntryWsPerson.getName());
-				assertEquals(new Integer(1), dataDescriptionEntryWsPerson.getLevelNumber());
+				assertEquals(Integer.valueOf(1), dataDescriptionEntryWsPerson.getLevelNumber());
 				assertNull(dataDescriptionEntryWsPerson.getParentDataDescriptionEntryGroup());
 
 				{
@@ -106,7 +106,7 @@ public class CommunicationDescriptionInputOutputTest extends CobolTestBase {
 							.getDataDescriptionEntry("WS-PERSON-ID");
 					assertNotNull(dataDescriptionEntryWsPersonId);
 					assertEquals("WS-PERSON-ID", dataDescriptionEntryWsPersonId.getName());
-					assertEquals(new Integer(5), dataDescriptionEntryWsPersonId.getLevelNumber());
+					assertEquals(Integer.valueOf(5), dataDescriptionEntryWsPersonId.getLevelNumber());
 					assertEquals(dataDescriptionEntryWsPerson,
 							dataDescriptionEntryWsPersonId.getParentDataDescriptionEntryGroup());
 				}
