@@ -42,12 +42,12 @@ public class DataDescriptionFillerTest extends CobolTestBase {
 			assertNull(dataDescriptionEntry.getName());
 			assertEquals(DataDescriptionEntry.DataDescriptionEntryType.GROUP,
 					dataDescriptionEntry.getDataDescriptionEntryType());
-			assertEquals(new Integer(1), dataDescriptionEntry.getLevelNumber());
+			assertEquals(Integer.valueOf(1), dataDescriptionEntry.getLevelNumber());
 
 			{
 				final DataDescriptionEntryGroup dataDescriptionEntryGroup = (DataDescriptionEntryGroup) dataDescriptionEntry;
 				assertTrue(dataDescriptionEntryGroup.getFiller());
-				assertEquals(new Integer(0), dataDescriptionEntryGroup.getFillerNumber());
+				assertEquals(Integer.valueOf(0), dataDescriptionEntryGroup.getFillerNumber());
 			}
 		}
 
@@ -57,12 +57,12 @@ public class DataDescriptionFillerTest extends CobolTestBase {
 			assertNull(dataDescriptionEntry.getName());
 			assertEquals(DataDescriptionEntry.DataDescriptionEntryType.GROUP,
 					dataDescriptionEntry.getDataDescriptionEntryType());
-			assertEquals(new Integer(1), dataDescriptionEntry.getLevelNumber());
+			assertEquals(Integer.valueOf(1), dataDescriptionEntry.getLevelNumber());
 
 			{
 				final DataDescriptionEntryGroup dataDescriptionEntryGroup = (DataDescriptionEntryGroup) dataDescriptionEntry;
 				assertTrue(dataDescriptionEntryGroup.getFiller());
-				assertEquals(new Integer(1), dataDescriptionEntryGroup.getFillerNumber());
+				assertEquals(Integer.valueOf(1), dataDescriptionEntryGroup.getFillerNumber());
 			}
 		}
 	}
